--- a/Technology-Watch/index.html
+++ b/Technology-Watch/index.html
@@ -15,14 +15,19 @@
         <button type="submit" id = 'addStudent' class="btn btn-outline-success mt-3">Add</button>
       </div>
     </form>
-
+    <ul></ul>
+    <form >
         <div class="form-group m-3">
-          <label for="formGroupExampleInput2">Technology </label>
-          <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Subject">
-          <button type="button" class="btn btn-outline-success mt-3">Assign</button>
+          <label for="Input2">Technology </label>
+          <input type="text" class="form-control" id="Input2" placeholder="Subject">
+          <button type="submit" class="btn btn-outline-success mt-3">Assign</button>
         </div>
-        <button type="button" class="btn btn-outline-danger m-3 mt-4">Refresh the list</button>
-      
+    </form>
+    <form action="">
+        <div class="form-group m-3">
+            <button type="button" class="btn btn-outline-danger m-3 mt-4">Refresh the list</button>
+        </div>
+    </form>
 
 
     <script src="app.js"></script>
